--- a/src/config.yaml
+++ b/src/config.yaml
@@ -8,4 +8,4 @@ api:
     host: localhost
     port: 8080
 headers:
-    origin: https://api.productivity.researchdev.xyz
+    origin: api.productivity.researchdev.xyz
